fix: countdown button spacing on mouse hover

--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -58,7 +58,7 @@
 }
 
 .countdownButton:not([disabled]):hover {
-  background: var(--blue-dark);
+  background: var(--blue-secondary);
 }
 
 .countdownButtonActive {
@@ -71,7 +71,7 @@
   color: var(--white);
 }
 
-.countdownButton img {
+.countdownButton svg {
   margin-left: 5px;
 }
 
